# expense-and-management-saas-app

./: README.md  dockerfile.dev
backend/: compose.yml
backend/api-gateway-service/: Dockerfile  environment_manager.py  kafka-producer.py  main.py  pyproject.toml
backend/api-gateway-service/routes/: common_routes.py  user_service_proxy.py
backend/user-service/: Dockerfile  main.py  pyproject.toml
backend/user-service/routes/: user_routes.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/custom_components/: welcome.tsx
