[tool.poetry]
name = "api-gateway-service"
version = "0.1.0"
description = ""
authors = ["Shahzaib Noor <shahzaibnoorcs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.22"
uvicorn = "^0.30.6"
email-validator = "^2.2.0"
emails = "^0.6"
psycopg = "^3.2.2"
passlib = "^1.7.4"
pydantic = "^2.9.2"
python-multipart = "^0.0.10"
gunicorn = "^23.0.0"
python-jose = "^3.3.0"
httpx = "^0.27.2"
alembic = "^1.13.2"
jinja2 = "^3.1.4"
kafka-python = "^2.0.2"
aiocache = "^0.12.3"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.7"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
types-python-jose = "^3.3.4.20240106"
passlib = "^1.7.4"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
